<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_styles"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.uw.tacoma.pedrol.lookandfeel.StylesActivity">

   <EditText
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:id="@+id/email_edit_txt"
       android:hint="@string/email_hint"
       style ="@style/EditTextStyle"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pwd_edit_txt"
        android:hint="@string/pwd_hint"
        style ="@style/PwdEditTextStyle"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button"
        android:id="@+id/clear_button"
        android:text="@string/clear_button_txt"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/uw_button"
        android:textColor="@color/uw_button_colors"
        android:id="@+id/submit_button"
        android:text="@string/submit_button_txt"
        android:onClick="submitClick"/>


</LinearLayout>
