<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_animations"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.uw.tacoma.pedrol.lookandfeel.AnimationsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="top"
        android:weightSum="3">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/spin_button"
            android:text="@string/spin_button_txt"
            android:textAlignment="center"
            style ="@style/uw_button"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:onClick="animateSpin"
            />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/move_button"
            android:text="@string/move_button_txt"
            android:textAlignment="center"
            style ="@style/uw_button"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:onClick="animateMove"
            />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/fade_button"
            android:text="@string/fade_button_txt"
            android:textAlignment="center"
            style ="@style/uw_button"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:onClick="animateFade"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical|center_horizontal">

        <TextView
            android:id="@+id/animate_me"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:text="@string/animating"
            android:gravity="center"
            android:background="@color/uwPurple"
            android:textColor="@color/uwGold"
            android:layout_margin="20dp"/>

    </LinearLayout>

</LinearLayout>